adding files to git repo