@@ -7,7 +7,13 @@ public class NodesUtil {
 		LinkedList linkedList = new LinkedList(null);
 		
 		for (int i=0; i< 10; i++) {
-			Node node2 = new Node(new Long(i));
+			Node node2 = null;
+			if (i%2 == 0) {
+				node2  = new Node(Long.valueOf(4));
+			} else {
+				node2  = new Node(Long.valueOf(i));
+			}
+			
 			node2.setNext(linkedList.getHead());
 			linkedList.setHead(node2);
 		}
